# adk

./: .gitignore  AGENTS.md  LICENSE  README.md  llms.txt  pyproject.toml
.cursor/skills/tesserax-adk/: SKILL.md
.github/workflows/: deploy-docs.yml  publish-pypi.yml
docs/: .gitignore  package-lock.json  package.json
docs/content/: __init__.md  adapter.md  cli.md  client.md  config.md  index.md  server.md
docs/content/.vitepress/: config.ts
docs/content/.vitepress/theme/: custom.css
scripts/: generate_docs.py  publish.sh
tesserax_adk/: __init__.py  adapter.py  cli.py  client.py  config.py  server.py
